--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@bytemd/plugin-gfm": "^1.21.0",
         "@bytemd/vue-next": "^1.21.0",
+        "@fontsource/roboto": "^5.0.13",
         "@github/relative-time-element": "^4.3.1",
         "@github/task-lists-element": "^2.0.5",
         "@gropius/graph-editor": "^0.0.1",
@@ -33,7 +34,6 @@
         "pinia": "^2.1.7",
         "reflect-metadata": "^0.2.1",
         "remark": "^15.0.1",
-        "roboto-fontface": "*",
         "sprotty": "^1.1.0",
         "strip-markdown": "^6.0.0",
         "uuid": "^9.0.1",
@@ -63,6 +63,7 @@
         "prettier": "^3.2.5",
         "sass": "^1.70.0",
         "typescript": "^5.3.3",
+        "unplugin-fonts": "^1.0.3",
         "vite": "^5.1.1",
         "vite-plugin-vuetify": "^2.0.1",
         "vue-tsc": "^1.8.27"
