--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fontsource/roboto": "^5.0.13",
         "@github/relative-time-element": "^4.4.0",
         "@github/task-lists-element": "^2.0.5",
+        "@graphiql/plugin-explorer": "^3.0.1",
         "@gropius/graph-editor": "^0.0.1",
         "@material/material-color-utilities": "^0.2.7",
         "@mdi/font": "7.4.47",
@@ -26,12 +27,15 @@
         "codemirror": "^5.65.16",
         "core-js": "^3.37.1",
         "github-markdown-css": "^5.5.1",
+        "graphiql": "^3.2.2",
         "graphql": "^16.8.1",
         "graphql-request": "^6.1.0",
         "jtd": "^0.1.1",
         "jwt-decode": "^4.0.0",
         "mitt": "^3.0.1",
         "pinia": "^2.1.7",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "reflect-metadata": "^0.2.2",
         "remark": "^15.0.1",
         "sprotty": "^1.2.0",
@@ -52,6 +56,8 @@
         "@graphql-codegen/typescript-graphql-request": "^6.2.0",
         "@graphql-codegen/typescript-operations": "^4.2.1",
         "@types/node": "^20.12.13",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
         "@types/uuid": "^9.0.8",
         "@types/webfontloader": "^1.6.38",
         "@vitejs/plugin-vue": "^5.0.4",
