--- a/nginx.conf
+++ b/nginx.conf
@@ -21,8 +21,8 @@ server {
         proxy_set_header X-Forwarded-Port $server_port;
     }
 
-    # Proxy /api/login
-    location /api/login {
+    # Proxy /auth
+    location /auth {
         proxy_pass ${LOGIN_SERVICE_ENDPOINT};
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -33,8 +33,5 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
-
-        # Remove /api/login from the forwarded path
-        rewrite ^/api/login/(.*) /$1 break;
     }
 }
