set cache control for html files

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,8 @@
 server {
     listen 80;
 
-    # Root directory
-    location / {
-        root   /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }
-
     # Proxy /api/graphql
-    location /api/graphql {
+    location ^~ /api/graphql {
         proxy_pass ${API_PUBLIC_ENDPOINT};
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -22,7 +16,7 @@ server {
     }
 
     # Proxy /auth
-    location /auth {
+    location ^~ /auth {
         proxy_pass ${LOGIN_SERVICE_ENDPOINT};
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -33,5 +27,19 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
+    }
+
+    # Non-html files
+    location ~* \.(?!html$)[a-zA-Z0-9]+$ {
+        root   /usr/share/nginx/html;
+        try_files $uri =404;
+    }
+
+    # Html files
+    location / {
+        root   /usr/share/nginx/html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        expires 0;
+        try_files $uri $uri/ /index.html;
     }
 }
