--- a/packages/graph-editor/package.json
+++ b/packages/graph-editor/package.json
@@ -7,17 +7,18 @@
         "dist"
     ],
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "watch": "tsc -w"
     },
     "dependencies": {
         "bezier-js": "^6.1.4",
         "elkjs": "^0.9.3",
-        "sprotty": "^1.2.1",
-        "sprotty-protocol": "^1.2.0",
+        "sprotty": "^1.3.0",
+        "sprotty-protocol": "^1.3.0",
         "web-worker": "^1.3.0"
     },
     "devDependencies": {
         "@types/bezier-js": "^4.1.3",
-        "typescript": "^5.4.5"
+        "typescript": "^5.5.4"
     }
 }
