--- a/packages/graph-editor/package.json
+++ b/packages/graph-editor/package.json
@@ -1,11 +1,18 @@
 {
     "name": "@gropius/graph-editor",
     "version": "0.0.1",
+    "type": "module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "license": "EPL-2.0",
     "files": [
-        "dist"
+        "dist",
+        "src"
     ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ccims/gropius-frontend.git"
+    },
     "scripts": {
         "build": "tsc",
         "watch": "tsc -w"
