--- a/packages/graph-editor/tsconfig.json
+++ b/packages/graph-editor/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "Node",
+        "target": "ES2017",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "lib": ["es2022", "dom"],
         "typeRoots": ["node_modules/@types", "typings", "reflect-metadata"],
         "sourceMap": true,
