--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "@types/webfontloader": "^1.6.38",
         "@vitejs/plugin-vue": "^5.1.4",
         "prettier": "^3.3.3",
-        "sass": "^1.79.3",
+        "sass-embedded": "^1.79.3",
         "typescript": "^5.6.2",
         "unplugin-fonts": "^1.1.1",
         "vite": "^5.4.7",
