--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "vee-validate": "^4.13.2",
         "vue": "3.5.8",
         "vue-router": "^4.4.5",
-        "vuetify": "^3.7.2",
+        "vuetify": "3.7.1",
         "webfontloader": "^1.6.28",
         "yup": "^1.4.0"
     },
