--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc --noEmit && vite build",
+        "build": "vite build",
         "preview": "vite preview",
         "codegen": "graphql-codegen --config codegen.yaml",
         "format": "prettier --write \"**/*.{ts,json,js,tsx,jsx,vue}\""
