--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
         "@gropius/graph-editor": "^0.0.1",
         "@material/material-color-utilities": "^0.3.0",
         "@mdi/font": "7.4.47",
-        "@vee-validate/yup": "^4.13.2",
+        "@vee-validate/yup": "^4.14.1",
         "@vueuse/core": "^11.1.0",
         "async-mutex": "^0.5.0",
         "axios": "^1.7.7",
         "codemirror": "^5.65.16",
         "core-js": "^3.38.1",
-        "github-markdown-css": "^5.6.1",
+        "github-markdown-css": "^5.7.0",
         "graphiql": "^3.7.1",
         "graphql": "^16.9.0",
         "graphql-request": "^6.1.0",
         "jtd": "^0.1.1",
         "jwt-decode": "^4.0.0",
         "mitt": "^3.0.1",
-        "pinia": "^2.2.2",
+        "pinia": "^2.2.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "reflect-metadata": "^0.2.2",
@@ -40,31 +40,32 @@
         "sprotty": "^1.3.0",
         "strip-markdown": "^6.0.0",
         "uuid": "^10.0.0",
-        "vee-validate": "^4.13.2",
-        "vue": "3.5.8",
+        "vee-validate": "^4.14.1",
+        "vue": "3.5.12",
         "vue-router": "^4.4.5",
-        "vuetify": "3.7.1",
+        "vuetify": "3.7.3",
         "webfontloader": "^1.6.28",
         "yup": "^1.4.0"
     },
     "devDependencies": {
-        "@babel/types": "^7.25.6",
-        "@graphql-codegen/cli": "^5.0.2",
-        "@graphql-codegen/typescript": "^4.0.9",
-        "@graphql-codegen/typescript-document-nodes": "^4.0.9",
+        "@babel/types": "^7.25.8",
+        "@graphql-codegen/cli": "^5.0.3",
+        "@graphql-codegen/typescript": "^4.1.0",
+        "@graphql-codegen/typescript-document-nodes": "^4.0.10",
         "@graphql-codegen/typescript-graphql-request": "^6.2.0",
-        "@graphql-codegen/typescript-operations": "^4.2.3",
-        "@types/node": "^22.5.5",
-        "@types/react": "^18.3.8",
-        "@types/react-dom": "^18.3.0",
+        "@graphql-codegen/typescript-operations": "^4.3.0",
+        "@types/node": "^22.7.6",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.1",
         "@types/uuid": "^10.0.0",
         "@types/webfontloader": "^1.6.38",
         "@vitejs/plugin-vue": "^5.1.4",
+        "postcss-github-markdown-css": "^0.0.3",
         "prettier": "^3.3.3",
-        "sass-embedded": "^1.79.3",
-        "typescript": "^5.6.2",
+        "sass-embedded": "^1.80.2",
+        "typescript": "^5.6.3",
         "unplugin-fonts": "^1.1.1",
-        "vite": "^5.4.7",
+        "vite": "^5.4.9",
         "vite-plugin-vuetify": "^2.0.4",
         "vue-tsc": "^2.1.6"
     },
@@ -75,5 +76,10 @@
         "tabWidth": 4,
         "trailingComma": "none",
         "printWidth": 120
+    },
+    "postcss": {
+        "plugins": {
+            "postcss-github-markdown-css": {}
+        }
     }
 }
